--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="theme-color" content="#0e1217">
+  <meta name="app-version" content="__VERSION__">
   <link rel="manifest" href="./manifest.json">
   <link rel="apple-touch-icon" sizes="192x192" href="./icon-192.png">
   <link rel="apple-touch-icon" sizes="512x512" href="./icon-512.png">
@@ -126,9 +127,7 @@
       background:none; border:none; font-size:20px; line-height:1;
       padding:4px; cursor:pointer; color:var(--muted);
     }
-    #settingsBtn:hover { opacity: 0.8; }
 
-    /* ⚙️ solid settings panel (non-transparent) */
     #settingsPanel{
       position:absolute; top:40px; left:8px;
       width:min(280px, calc(100% - 16px));
@@ -138,15 +137,11 @@
       padding:12px;
       display:none;
       box-shadow:0 8px 24px rgba(0,0,0,.35);
-      backdrop-filter: none;
-      -webkit-backdrop-filter: none;
     }
     #settingsPanel header{ display:flex; align-items:center; justify-content:space-between; margin-bottom:8px; font-weight:700; font-size:14px; color:var(--muted); }
     #closeSettings{ background:none; border:none; font-size:18px; line-height:1; color:var(--muted); cursor:pointer; }
     .settings-row{ display:flex; align-items:center; justify-content:space-between; gap:12px; font-size:14px; margin:8px 0; }
     .settings-kv{ color:var(--muted); }
-
-    /* update button */
     .settings-actions { display:flex; gap:8px; justify-content:flex-end; margin-top:10px; }
     .settings-actions .mini { padding:6px 10px; border-radius:8px; border:1px solid var(--glass-border); background:var(--button); color:var(--text); font-size:13px; cursor:pointer; }
     .settings-actions .mini:active { transform: scale(.98); }
@@ -167,7 +162,7 @@
         </header>
         <div class="settings-row">
           <div class="settings-kv">Version</div>
-          <div><code id="appVersion">1.0.0</code></div>
+          <div><code id="appVersion">__VERSION__</code></div>
         </div>
         <div class="settings-actions">
           <button class="mini" id="btnUpdate">Check for update</button>
@@ -184,14 +179,12 @@
       </div>
 
       <div class="sp"></div>
-
       <div id="temp" class="temp">—°</div>
       <div class="hint" id="temp-hint">Setpoint</div>
-
       <div class="sp"></div>
 
       <div class="grid">
-        <button class="btn up"   id="btn-up">▲ +1°</button>
+        <button class="btn up" id="btn-up">▲ +1°</button>
         <button class="btn down" id="btn-down">▼ −1°</button>
       </div>
 
@@ -217,7 +210,6 @@
   <div class="swipe-hint" aria-hidden="true">Swipe up to close</div>
 
 <script>
-  // ------- state helpers -------
   function has(k){ return localStorage.getItem(k) !== null; }
   function get(k,d){ return has(k) ? localStorage.getItem(k) : d; }
   function set(k,v){ localStorage.setItem(k, v); }
@@ -243,18 +235,11 @@
   function render(){
     document.getElementById('badge-mode').textContent = "MODE: " + state.mode.toUpperCase();
     document.getElementById('badge-fan').textContent  = "FAN: "  + state.fan.toUpperCase();
-
-    document.querySelectorAll('#mode-bar .seg').forEach(b=>{
-      b.classList.toggle('active', b.dataset.mode === state.mode);
-    });
-    document.querySelectorAll('#fan-bar .seg').forEach(b=>{
-      b.classList.toggle('active', b.dataset.fan === state.fan);
-    });
-
+    document.querySelectorAll('#mode-bar .seg').forEach(b=>b.classList.toggle('active', b.dataset.mode === state.mode));
+    document.querySelectorAll('#fan-bar .seg').forEach(b=>b.classList.toggle('active', b.dataset.fan === state.fan));
     const t = activeTemp();
     const tempEl = document.getElementById('temp');
     const hint = document.getElementById('temp-hint');
-
     if (t == null) {
       tempEl.textContent = "—°";
       hint.textContent = "Setpoint (mode OFF)";
@@ -292,36 +277,29 @@
   setupHold(document.getElementById('btn-up'), +1);
   setupHold(document.getElementById('btn-down'), -1);
 
-  document.querySelectorAll('#mode-bar .seg').forEach(btn=>{
-    btn.addEventListener('click', ()=>{ state.mode = btn.dataset.mode; render(); save(); });
-  });
-  document.querySelectorAll('#fan-bar .seg').forEach(btn=>{
-    btn.addEventListener('click', ()=>{ state.fan = btn.dataset.fan; render(); save(); });
-  });
+  document.querySelectorAll('#mode-bar .seg').forEach(btn=>btn.addEventListener('click', ()=>{ state.mode = btn.dataset.mode; render(); save(); }));
+  document.querySelectorAll('#fan-bar .seg').forEach(btn=>btn.addEventListener('click', ()=>{ state.fan = btn.dataset.fan; render(); save(); }));
 
   render();
 
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', ()=>{ navigator.serviceWorker.register('./service-worker.js'); });
-  }
+  if ('serviceWorker' in navigator) window.addEventListener('load', ()=>navigator.serviceWorker.register('./service-worker.js'));
 
-  // ----- Settings panel -----
-  const APP_VERSION = "1.0.0";
-  const settingsBtn = document.getElementById('settingsBtn');
-  const settingsPanel = document.getElementById('settingsPanel');
-  const closeSettings = document.getElementById('closeSettings');
+  const APP_VERSION = document.querySelector('meta[name="app-version"]').content;
   const versionEl = document.getElementById('appVersion');
   versionEl.textContent = APP_VERSION;
 
-  function showPanel(show){ settingsPanel.style.display = show ? 'block' : 'none'; }
-  settingsBtn.addEventListener('click', (e)=>{ e.stopPropagation(); showPanel(settingsPanel.style.display !== 'block'); });
-  closeSettings.addEventListener('click', ()=>showPanel(false));
-  document.addEventListener('click', (e)=>{ if(settingsPanel.style.display==='block' && !settingsPanel.contains(e.target) && e.target!==settingsBtn) showPanel(false); });
-  document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') showPanel(false); });
-
-  // ----- Force update -----
+  const settingsBtn = document.getElementById('settingsBtn');
+  const settingsPanel = document.getElementById('settingsPanel');
+  const closeSettings = document.getElementById('closeSettings');
   const btnUpdate = document.getElementById('btnUpdate');
   const updateStatus = document.getElementById('updateStatus');
+
+  function showPanel(show){ settingsPanel.style.display = show ? 'block' : 'none'; }
+  settingsBtn.addEventListener('click', e=>{ e.stopPropagation(); showPanel(settingsPanel.style.display !== 'block'); });
+  closeSettings.addEventListener('click', ()=>showPanel(false));
+  document.addEventListener('click', e=>{ if(settingsPanel.style.display==='block' && !settingsPanel.contains(e.target) && e.target!==settingsBtn) showPanel(false); });
+  document.addEventListener('keydown', e=>{ if(e.key==='Escape') showPanel(false); });
+
   async function forceUpdate(){
     if(!('serviceWorker' in navigator)){ updateStatus.textContent='No service worker present.'; return; }
     try{
@@ -333,7 +311,7 @@
       updateStatus.textContent='Update check failed.'; console.error(e);
     }
   }
-  btnUpdate.addEventListener('click',(e)=>{ e.stopPropagation(); forceUpdate(); });
+  btnUpdate.addEventListener('click', e=>{ e.stopPropagation(); forceUpdate(); });
 </script>
 </body>
 </html>
