--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div>
 
       <div class="row">
-        <div class="title title-main">THERMOSTAT</div>
+        <div class="title title-main">THERMOSTAT_vTest</div>
         <div style="display:flex;gap:6px;align-items:center;">
           <div id="badge-mode" class="badge">MODE: —</div>
           <div id="badge-fan"  class="badge">FAN: —</div>
