--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="theme-color" content="#0e1217">
-  <meta name="app-version" content="1.0.1">
+  <!-- Version token for GitHub Action -->
+  <meta name="app-version" content="__VERSION__">
   <link rel="manifest" href="./manifest.json">
   <link rel="apple-touch-icon" sizes="192x192" href="./icon-192.png">
   <link rel="apple-touch-icon" sizes="512x512" href="./icon-512.png">
@@ -162,7 +163,8 @@
         </header>
         <div class="settings-row">
           <div class="settings-kv">Version</div>
-          <div><code id="appVersion">1.0.1</code></div>
+          <!-- Version token here -->
+          <div><code id="appVersion">__VERSION__</code></div>
         </div>
         <div class="settings-actions">
           <button class="mini" id="btnUpdate">Check for update</button>
@@ -284,9 +286,9 @@
 
   if ('serviceWorker' in navigator) window.addEventListener('load', ()=>navigator.serviceWorker.register('./service-worker.js'));
 
+  // Read version from meta tag (replaced by workflow)
   const APP_VERSION = document.querySelector('meta[name="app-version"]').content;
-  const versionEl = document.getElementById('appVersion');
-  versionEl.textContent = APP_VERSION;
+  document.getElementById('appVersion').textContent = APP_VERSION;
 
   const settingsBtn = document.getElementById('settingsBtn');
   const settingsPanel = document.getElementById('settingsPanel');
