--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="./manifest.json">
   <link rel="apple-touch-icon" sizes="192x192" href="./icon-192.png">
   <link rel="apple-touch-icon" sizes="512x512" href="./icon-512.png">
-  <title>Thermostat</title>
+  <title>Thermostat_</title>
 
   <style>
     :root {
