--- a/index.html
+++ b/index.html
@@ -167,7 +167,6 @@
 
     <div class="card">
       <button id="settingsBtn" aria-label="Settings">⚙️</button>
-
       <div id="settingsPanel" role="dialog" aria-modal="false" aria-labelledby="settingsTitle">
         <header>
           <div id="settingsTitle">Settings</div>
@@ -179,6 +178,10 @@
         </div>
         <div class="settings-actions">
           <button class="mini" id="btnUpdate">Check for update</button>
+          <button class="mini" id="btnTokenStatus">Check token</button>
+          <button class="mini" id="btnTokenSave">Paste tokens</button>
+          <button class="mini" id="btnApiTest">BFF test</button>
+          <button class="mini" id="btnEcobeeTest">Ecobee summary</button>
         </div>
         <div id="updateStatus" aria-live="polite"></div>
       </div>
